--- a/index.html
+++ b/index.html
@@ -6,8 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script defer src="./dist/bundle.js"></script>
+
+    <style>
+        html, body, #root{
+            height: 100%;
+        }
+    </style>
 </head>
 <body>
     <div id="root"></div>
+    
 </body>
 </html>
