--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,13 +9,18 @@
     <script defer src="./dist/bundle.js"></script>
 
     <style>
-        html, body, #root{
+        html,
+        body,
+        #root {
             height: 100%;
+            margin: 0;
         }
     </style>
 </head>
+
 <body>
     <div id="root"></div>
-    
+
 </body>
+
 </html>
